<resources>
    <string name="app_name">A-level</string>
    <string name="menu_account">Account</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_home">Home</string>
    <string name="nav_header_title">Navigation</string>
    <string name="nav_header_subtitle">Hello!</string>
    <string name="nav_header_desc">Navigate between apps</string>
    <string name="todo">To Do</string>
    <string name="settings">Settings</string>

    <string name="load_data">Load data</string>
    <string name="loaded_data">Loaded data</string>
    <string name="state_label">State: </string>
    <string name="date_label">Date: </string>
    <string name="details_label">Details: </string>
    <string name="add_new_btn">Add New</string>
    <string name="addDetailsHint">Action item</string>
    <string name="completeSwitch">Done</string>
    <string name="submit_button">Submit</string>
    <string name="error_title">What Is Your Error/Query?</string>
    <string name="new_event">New Event</string>
    <string name="settings_page">Settings Page</string>

</resources>