<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.a_level.ui.home.home_page"
        android:label="@string/menu_home"
        tools:layout="@layout/page_home" >
        <action
            android:id="@+id/action_nav_home_to_errorreport_page"
            app:destination="@id/errorreport_page" />
        <action
            android:id="@+id/action_nav_home_to_nav_calendar"
            app:destination="@id/nav_calendar" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.a_level.ui.calendar.calendar_page"
        android:label="@string/menu_calendar"
        tools:layout="@layout/page_calendar" >
        <action
            android:id="@+id/action_nav_calendar_to_errorreport_page"
            app:destination="@id/errorreport_page" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.a_level.ui.account.settings_page"
        android:label="@string/settings"
        tools:layout="@layout/page_settings">
        <action
            android:id="@+id/action_nav_settings_to_errorreport_page"
            app:destination="@id/errorreport_page" />
    </fragment>
    <activity
        android:id="@+id/errorreport_page"
        android:name="com.example.a_level.ui.errorreport_page"
        android:label="errorreport_page" />
</navigation>