<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardBackgroundColor="#eeeeee"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:text="@string/date_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dt"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/completeSwitch"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/completeSwitch" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/detailsLabel"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:text="@string/details_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>